controller/test/e2e/features/inferenceextension/testdata/baseline-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-sim-svc
  namespace: benchmark
spec:
  selector:
    app: llm-sim
  ports:
  - port: 8000
    targetPort: 8000
