controller/test/e2e/features/inferenceextension/testdata/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-sim-route
  namespace: benchmark
spec:
  parentRefs:
  - name: gateway
    namespace: agentgateway-base
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: llm-sim-svc
      namespace: benchmark
      port: 8000
