controller/test/e2e/features/inferenceextension/testdata/inference-pool.yaml
apiVersion: inference.networking.x-k8s.io/v1
kind: InferencePool
metadata:
  name: llm-pool
  namespace: benchmark
spec:
  targetPorts:
  - 8080
  selector:
    matchLabels:
      app: llm-sim
  endpointPickerRef:
    name: epp-service
    port: 9002
