controller/test/e2e/features/inferenceextension/testdata/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-benchmark
  namespace: benchmark
spec: 
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: benchmark
  to: 
  - group: ""
    kind: Service
